[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Jason Yee <446031+jwsy@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
streamlit = "^1.27.2"
joblib = "1.4.2"
scikit-learn = "1.5.2"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"